--- a/Task_16_5.ipynb
+++ b/Task_16_5.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -50,17 +50,17 @@
       "+-------------------------+------------+--------------------------------+\n",
       "|          Model          | Dokładność | Czas trenowania (microseconds) |\n",
       "+-------------------------+------------+--------------------------------+\n",
-      "| Nieskalowane dane - KNN |   0.504    |              3091              |\n",
-      "|   Skalowane dane - KNN  |   0.6026   |              998               |\n",
-      "|        9 PC - KNN       |   0.5949   |              1947              |\n",
-      "|        8 PC - KNN       |   0.5066   |              1994              |\n",
-      "|        7 PC - KNN       |   0.4901   |              1957              |\n",
-      "|        6 PC - KNN       |   0.4856   |              997               |\n",
+      "| Nieskalowane dane - KNN |   0.504    |              995               |\n",
+      "|   Skalowane dane - KNN  |   0.6026   |              1464              |\n",
+      "|        9 PC - KNN       |   0.5949   |              2513              |\n",
+      "|        8 PC - KNN       |   0.5066   |              999               |\n",
+      "|        7 PC - KNN       |   0.4901   |              998               |\n",
+      "|        6 PC - KNN       |   0.4856   |               0                |\n",
       "|        5 PC - KNN       |   0.2237   |               0                |\n",
       "|        4 PC - KNN       |   0.2846   |               0                |\n",
       "|        3 PC - KNN       |   -0.164   |               0                |\n",
       "|        2 PC - KNN       |  -0.4771   |               0                |\n",
-      "|        1 PC - KNN       |   -1.286   |               0                |\n",
+      "|        1 PC - KNN       |   -1.286   |              361               |\n",
       "+-------------------------+------------+--------------------------------+\n"
      ]
     }
@@ -140,9 +140,107 @@
     "# Trenowanie modelu na jednej Głównej Składowej\n",
     "PC1_data = train_and_check(knn, X_train_pca[:, :1], X_test_pca[:, :1],  y_train, y_test)\n",
     "results.add_row(['1 PC - KNN', PC1_data[0], PC1_data[1]])\n",
-    "print(results)\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15000, 8)\n",
+      "(15000,)\n",
+      "KNN with PCA:\n",
+      "(15000, 5)\n",
+      "(15000,)\n",
+      "PCA explained variance ratio:\n",
+      "[0.1696251  0.12629706 0.12397574 0.12203939 0.12040256]\n",
+      "\n",
+      "Accuracy: 0.8120\n",
+      "Score: 0.8120\n",
+      "\n",
+      "KNN without PCA:\n",
+      "Accuracy: 0.8451\n",
+      "Score: 0.8451\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
     "\n",
+    "\n",
+    "diabetes = pd.read_csv('diabetes.csv')\n",
+    "features = ['Pregnancies','PlasmaGlucose','DiastolicBloodPressure','TricepsThickness','SerumInsulin','BMI','DiabetesPedigree','Age']\n",
+    "target = 'Diabetic'\n",
+    "X, y = diabetes[features], diabetes[target]\n",
+    "\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
+    "\n",
+    "X_scaled = StandardScaler().fit_transform(X)\n",
+    "pca = PCA(n_components=5)\n",
+    "X_pca = pca.fit_transform(X_scaled)\n",
+    "\n",
+    "print('KNN with PCA:')\n",
+    "print(X_pca.shape)\n",
+    "print(y.shape)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.25 ,stratify=y, shuffle=True)\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=150)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred = knn.predict(X_test)\n",
+    "print(f\"PCA explained variance ratio:\")\n",
+    "print(f\"{pca.explained_variance_ratio_}\")\n",
+    "print()\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.4f}\")\n",
+    "print(f\"Score: {knn.score(X_test, y_test):.4f}\")\n",
+    "\n",
+    "print()\n",
+    "print('KNN without PCA:')\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25 ,stratify=y, shuffle=True)\n",
+    "knn = KNeighborsClassifier(n_neighbors=8)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred = knn.predict(X_test)\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.4f}\")\n",
+    "print(f\"Score: {knn.score(X_test, y_test):.4f}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6664\n",
+      "Score: 0.6664\n",
+      "Accuracy: 0.9424\n",
+      "Score: 0.9424\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "random_forest = RandomForestClassifier(n_estimators=1000, n_jobs=-1, max_depth=20, min_samples_leaf=3)\n",
+    "random_forest.fit(X_train_pca, y_train)\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, random_forest.predict(X_test_pca)):.4f}\")\n",
+    "\n",
+    "random_forest.fit(X_train, y_train)\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, random_forest.predict(X_test)):.4f}\")"
    ]
   }
  ],
