--- a/Task_16_5.ipynb
+++ b/Task_16_5.ipynb
@@ -217,17 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6664\n",
-      "Score: 0.6664\n",
-      "Accuracy: 0.9424\n",
-      "Score: 0.9424\n"
+      "Accuracy with PCA: 0.6669\n",
+      "Accuracy without PCA: 0.9421\n"
      ]
     }
    ],
@@ -237,10 +235,10 @@
     "\n",
     "random_forest = RandomForestClassifier(n_estimators=1000, n_jobs=-1, max_depth=20, min_samples_leaf=3)\n",
     "random_forest.fit(X_train_pca, y_train)\n",
-    "print(f\"Accuracy: {accuracy_score(y_test, random_forest.predict(X_test_pca)):.4f}\")\n",
+    "print(f\"Accuracy with PCA: {accuracy_score(y_test, random_forest.predict(X_test_pca)):.4f}\")\n",
     "\n",
     "random_forest.fit(X_train, y_train)\n",
-    "print(f\"Accuracy: {accuracy_score(y_test, random_forest.predict(X_test)):.4f}\")"
+    "print(f\"Accuracy without PCA: {accuracy_score(y_test, random_forest.predict(X_test)):.4f}\")"
    ]
   }
  ],
